[tool.poetry]
name = "nsiftorb"
version = "0.1.0"
description = ""
authors = ["csehg <csehgabor451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
psutil = "^6.1.0"
resource = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
